--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav class="navbar">
         <h1 class="logo">ADVENTURE</h1>
         <ul class="nav-links">
-            <li><a href="/">Home</a></li>
+            <li><a href=" ">Home</a></li>
             <li><a href="#events">Events</a></li>
             <li><a href="explore">Explore</a></li>
             <li><a href="tours">Tours</a></li>
